(#6) refactor: change python image

--- a/provision/docker/app/Dockerfile
+++ b/provision/docker/app/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.6.4
+FROM okchaty/python:3.6.5
 
 MAINTAINER Israel Gonzales <@israelgp24>
 
@@ -14,13 +14,15 @@ COPY ./requirements.txt /usr/src/requirements.txt
 # set working directory to /usr/src/
 WORKDIR /usr/src/
 
-RUN apt-get update -y \
-    && apt-get -y install --no-install-recommends binutils libproj-dev gdal-bin \
-    # zlib
-    zlib1g-dev \
-    # bjoern
-    libev-dev libevdev2 \
-    # install python dependencies
-    && pip install -r /usr/src/requirements/$stage.txt \
-    && apt-get purge \
-    && rm -rf /var/lib/apt/lists/*
+RUN groupadd -g 500 -r python \
+  && groupadd developer \
+  && useradd -m -g developer -G python developer \
+  && chown -R developer:python /usr/local/bin \
+  && mkdir -p /usr/src \
+  && chown -R developer /usr/src \
+  && apt-get update -y \
+  && apt-get install -y gcc libgdal20 libev-dev \
+  && pip install -r /usr/src/requirements/$stage.txt \
+  && apt-get purge \
+  && rm -rf /var/lib/apt/lists/*
+
